...
        view.backgroundColor = .white
        title = "Top Albums Feed"
    }
    
    func setupTableView() {
        let tableV = UITableView(frame: view.bounds)
        tableV.accessibilityIdentifier = "TobAlbumsTableView"
        tableV.center = view.center
        tableV.tableFooterView = UIView()
        tableV.delegate = self
        tableV.dataSource = self
        tableV.translatesAutoresizingMaskIntoConstraints = false
        
...
        guard let cell = tableView.cellForRow(at: indexPath) as? AlbumTableViewCell else { return }
        let model = feedResults[indexPath.row]
        let detailsViewModel = TopAlbumDetailViewModel(album: model, headerImageData: cell.albumImageView.image?.pngData())
        let detailsController = TopAlbumDetailViewController()
        detailsController.viewModel = detailsViewModel
        
        navigationItem.backButtonTitle = "Back"
        navigationController?.pushViewController(detailsController, animated: true)
    }
}

extension UIView {
    
...
